aa_nginx_deployment_anti_affinity.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: "env"
                  operator: In
                  values:
                    - production
                    #- europa
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: nginx
        image: sirile/scala-boot-test
        ports:
        - containerPort: 80
