aa_nginx_deployment_anti_affinity3.yaml
# este no funciona bien, despliega en el nodo dev
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: env
                  operator: NotIn
                  values:
                    - development
              topologyKey: kubernetes.io/hostname
      containers:
      - name: nginx
        image: sirile/scala-boot-test
        ports:
        - containerPort: 80
