aa_nginx_deployment_node_selector.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: sirile/scala-boot-test
        ports:
        - containerPort: 80
      nodeSelector:
        #region: asia
        env: production
