aa_nginx_service_external_ips.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: nginx
  name: nginx
spec:
  ports:
    - port: 80
  selector:
    app: nginx
  type: ClusterIP
  externalIPs:
    - 192.168.1.46
    - 192.168.1.50
    - 192.168.1.55
    - 192.168.1.51
