aa_nginx_service_nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: nginx
  name: nginx
spec:
  ports:
    - port: 80
      nodePort: 30080
  selector:
    app: nginx
  type: NodePort
#  externalIPs:
#    - 192.168.1.46
#    - 192.168.1.50
#    - 192.168.1.55
#    - 192.168.1.51
