bind-svc-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: bind
  labels:
    name: bind
spec:
  ports:
    - port: 53
      #nodePort: 30053
      protocol: UDP
  selector:
    name: bind
#  type: NodePort
  externalIPs:
    - 192.168.1.51
---
apiVersion: v1
kind: Service
metadata:
  name: webmin
  labels:
    name: webmin 
spec:
  ports:
    - port: 10000
      #nodePort: 30053
  selector:
    name: bind
#  type: NodePort
  externalIPs:
    - 192.168.1.51
