ghost_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ghostservice
  name: ghostservice
spec:
  ports:
    - port: 2368
  selector:
    app: ghost
  type: ClusterIP
