aa_ingress_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: webapp1
spec:
    replicas: 1
    template:
        metadata:
            labels:
                app: webapp1
        spec:
            containers:
            - name: webapp1
              image: sirile/scala-boot-test
              ports:
              - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: webapp2
spec:
    replicas: 1
    template:
        metadata:
            labels:
                app: webapp2
        spec:
            containers:
            - name: webapp2
              image: sirile/scala-boot-test
              ports:
              - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: webapp3
spec:
    replicas: 1
    template:
        metadata:
            labels:
                app: webapp3
        spec:
            containers:
            - name: webapp3
              image: sirile/scala-boot-test
              ports:
              - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: webapp1-svc
    labels:
        app: webapp1
spec:
    ports:
    - port: 80
    selector:
        app: webapp1
---
apiVersion: v1
kind: Service
metadata:
    name: webapp2-svc
    labels:
        app: webapp2
spec:
    ports:
    - port: 80
    selector:
        app: webapp2
---
apiVersion: v1
kind: Service
metadata:
    name: webapp3-svc
    labels:
        app: webapp3
spec:
    ports:
    - port: 80
    selector:
        app: webapp3
---
apiVersion: v1
kind: Service
metadata:
    name: nginx-ingress-lb
    labels:
        app: nginx-ingress
spec:
    externalIPs:
    - 192.168.1.51
    ports:
    - port: 80
      name: http
      targetPort: 80
    selector:
        app: nginx-ingress

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: webapp-ingress
spec:
    rules:
    - host: centos13.mired
      http:
        paths:
        - path: /webapp1
          backend:
            serviceName: webapp1-svc
            servicePort: 80
        - path: /webapp2
          backend:
            serviceName: webapp2-svc
            servicePort: 80
        - backend:
            serviceName: webapp3-svc
            servicePort: 80
